# docs/swagger.yaml
@@ -4,7 +4,11 @@ definitions:
     properties:
       code:
         example: "012345"
+        maxLength: 6
+        minLength: 6
         type: string
+    required:
+    - code
     type: object
   handlers.ErrorResponse:
     properties:
@@ -12,39 +16,6 @@ definitions:
         type: integer
       error: {}
       message:
-        type: string
-    type: object
-  handlers.LoginRequestBody:
-    properties:
-      email:
-        example: example@gmail.com
-        type: string
-      password:
-        example: P@ssw0rd
-        type: string
-    type: object
-  handlers.RefreshTokenRequestBody:
-    properties:
-      refreshToken:
-        example: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiIxMjM0NTY3ODkwIiwibmFtZSI6IkpvaG4gRG9lIiwiaWF0IjoxNTE2MjM5MDIyfQ.SflKxwRJSMeKKF2QT4fwpMeJf36POk6yJV_adQssw5c
-        type: string
-    type: object
-  handlers.RegistrationRequestBody:
-    properties:
-      email:
-        example: example@gmail.com
-        type: string
-      password:
-        example: P@ssw0rd
-        type: string
-    type: object
-  handlers.ResetPasswordRequestBody:
-    properties:
-      email:
-        example: example@gmail.com
-        type: string
-      password:
-        example: P@ssw0rd
         type: string
     type: object
   handlers.Response:
@@ -62,6 +33,18 @@ definitions:
         example: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiIxMjM0NTY3ODkwIiwibmFtZSI6IkpvaG4gRG9lIiwiaWF0IjoxNTE2MjM5MDIyfQ.SflKxwRJSMeKKF2QT4fwpMeJf36POk6yJV_adQssw5c
         type: string
     type: object
+  handlers.UserRequestBody:
+    properties:
+      email:
+        example: example@gmail.com
+        type: string
+      password:
+        example: P@ssw0rd
+        type: string
+    required:
+    - email
+    - password
+    type: object
 host: gw.verifire.com/auth
 info:
   contact:
@@ -75,35 +58,26 @@ info:
   title: Auth Service
   version: 1.0.7
 paths:
-  /v1/token/refresh:
+  /v1/confirm:
     post:
       consumes:
       - application/json
       parameters:
-      - description: raw request body, should contain Refresh Token
+      - description: raw request body
         in: body
-        name: login
+        name: code
         required: true
         schema:
-          $ref: '#/definitions/handlers.RefreshTokenRequestBody'
+          $ref: '#/definitions/handlers.CodeRequestBody'
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            allOf:
-            - $ref: '#/definitions/handlers.Response'
-            - properties:
-                data:
-                  $ref: '#/definitions/handlers.TokensResponseBody'
-              type: object
+            $ref: '#/definitions/handlers.Response'
         "400":
           description: Bad Request
-          schema:
-            $ref: '#/definitions/handlers.ErrorResponse'
-        "401":
-          description: Unauthorized
           schema:
             $ref: '#/definitions/handlers.ErrorResponse'
         "422":
@@ -114,7 +88,47 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/handlers.ErrorResponse'
-      summary: refresh a pair of JWT tokens
+      summary: confirm registration/reset password with 6-digit code from email/sms
+      tags:
+      - auth
+  /v1/sign-up:
+    post:
+      consumes:
+      - application/json
+      description: |-
+        Password should contain:
+        - minimum of one small case letter
+        - minimum of one upper case letter
+        - minimum of one digit
+        - minimum of one special character
+        - minimum 8 characters length
+      parameters:
+      - description: raw request body
+        in: body
+        name: registration
+        required: true
+        schema:
+          $ref: '#/definitions/handlers.UserRequestBody'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/handlers.Response'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handlers.ErrorResponse'
+        "422":
+          description: Unprocessable Entity
+          schema:
+            $ref: '#/definitions/handlers.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handlers.ErrorResponse'
+      summary: registration user by credentials
       tags:
       - auth
   /v1/token/validate:
@@ -137,47 +151,6 @@ paths:
       summary: validate token
       tags:
       - api-gateway-special
-  /v1/user/confirm:
-    post:
-      consumes:
-      - application/json
-      parameters:
-      - description: raw request body
-        in: body
-        name: code
-        required: true
-        schema:
-          $ref: '#/definitions/handlers.CodeRequestBody'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/handlers.Response'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/handlers.ErrorResponse'
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/handlers.ErrorResponse'
-        "410":
-          description: Gone
-          schema:
-            $ref: '#/definitions/handlers.ErrorResponse'
-        "422":
-          description: Unprocessable Entity
-          schema:
-            $ref: '#/definitions/handlers.ErrorResponse'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/handlers.ErrorResponse'
-      summary: confirm registration/reset password with 6-digit code from email/sms
-      tags:
-      - auth
   /v1/user/login:
     post:
       consumes:
@@ -196,7 +169,7 @@ paths:
         name: login
         required: true
         schema:
-          $ref: '#/definitions/handlers.LoginRequestBody'
+          $ref: '#/definitions/handlers.UserRequestBody'
       produces:
       - application/json
       responses:
@@ -254,94 +227,6 @@ paths:
       security:
       - BearerAuth: []
       summary: logout user
-      tags:
-      - auth
-  /v1/user/register:
-    post:
-      consumes:
-      - application/json
-      description: |-
-        Password should contain:
-        - minimum of one small case letter
-        - minimum of one upper case letter
-        - minimum of one digit
-        - minimum of one special character
-        - minimum 8 characters length
-      parameters:
-      - description: raw request body
-        in: body
-        name: registration
-        required: true
-        schema:
-          $ref: '#/definitions/handlers.RegistrationRequestBody'
-      produces:
-      - application/json
-      responses:
-        "201":
-          description: Created
-          schema:
-            $ref: '#/definitions/handlers.Response'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/handlers.ErrorResponse'
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/handlers.ErrorResponse'
-        "409":
-          description: Conflict
-          schema:
-            $ref: '#/definitions/handlers.ErrorResponse'
-        "422":
-          description: Unprocessable Entity
-          schema:
-            $ref: '#/definitions/handlers.ErrorResponse'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/handlers.ErrorResponse'
-      summary: registration user by credentials
-      tags:
-      - auth
-  /v1/user/reset-password:
-    post:
-      consumes:
-      - application/json
-      description: |-
-        Password should contain:
-        - minimum of one small case letter
-        - minimum of one upper case letter
-        - minimum of one digit
-        - minimum of one special character
-        - minimum 8 characters length
-      parameters:
-      - description: raw request body
-        in: body
-        name: registration
-        required: true
-        schema:
-          $ref: '#/definitions/handlers.ResetPasswordRequestBody'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/handlers.Response'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/handlers.ErrorResponse'
-        "422":
-          description: Unprocessable Entity
-          schema:
-            $ref: '#/definitions/handlers.ErrorResponse'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/handlers.ErrorResponse'
-      summary: resetting password
       tags:
       - auth
 schemes:
